--- a/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
@@ -1,32 +1,46 @@
 <div class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_operation_operator')}} : </div>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_operation_operator')}} :
+	</div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.Operator" ng-options="x as $root.i18n('label_operation_operator_'+x) for x in enumOperations"></select>
 	</div>
 </div>
 
 <div class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_objecttype')}} : </div>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_objecttype')}} :
+	</div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.Node.SelectedObjectType" ng-options="x as x.name for x in op.engine.availableObjectTypes"></select>
 	</div>
 </div>
 
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_operand')}} : </div>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_pt_operand')}} :
+	</div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.Node.SelectedObjectType.Operand" ng-options="p as p.name for p in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"></select>
 	</div>
 </div>
 
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_filter')}} : </div>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_pt_filter')}} :
+	</div>
 	<div class="row-cell row-cell-value row-cell-max-width">
 		<div class="cell-content-wrapper filter-wrapper">
 			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
-				<div class="filter-cell header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+				<div class="filter-cell header-cell header-property">
+					{{$root.i18n('label_pt_filter_column_property')}}
+				</div>
+				<div class="filter-cell header-cell header-operator">
+					{{$root.i18n('label_pt_filter_column_operator')}}
+				</div>
+				<div class="filter-cell header-cell header-value">
+					{{$root.i18n('label_pt_filter_column_value')}}
+				</div>
 			</div>
 			<div class="filter-row filter-content" ng-repeat="f in op.engine.Node.Filters">
 				<div class="filter-property-scriptname filter-cell">
@@ -36,61 +50,96 @@
 					<select ng-model="f.Operator" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
 				</div>
 				<div class="filter-value filter-cell">
-					<input ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='text'">
-					<input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='checkbox'">
-					<input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='date'">
-					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'">
+					<input ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='text'" />
+					<input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='checkbox'" />
+					<input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='date'" />
+					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'" />
 					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
 					<select style="height:initial" multiple size="{{op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups.length}}" ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator == 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
-				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
+				<div class="remove-filter-button filter-cell">
+					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a>
+				</div>
 			</div>
-			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a></div>
+			<div class="add-filter-button">
+				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a>
+			</div>
 		</div>
 	</div>
 </div>
 
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_ot_result')}} : </div>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_ot_result')}} :
+	</div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.ResultObjectType" ng-options="x as x.name for x in op.engine.availableObjectTypes"></select>
 	</div>
 </div>
 
 <div ng-if="op.engine.ResultObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_result')}} : </div>
-	<div class="row-cell row-cell-value">
-		<select ng-model="op.engine.ResultObjectType.ResultProperty" ng-options="p as p.name for p in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"></select>
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_result_pt_identifier')}} :
 	</div>
-</div>
-
-<div ng-if="op.engine.ResultObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_result_create_new')}} : </div>
-	<div class="row-cell row-cell-value">
-		<input ng-model="op.engine.CreateNewItem" type="checkbox" ng-change="resetPropertyIdentifier()">
-	</div>
-</div>
-
-<div ng-if="op.engine.ResultObjectType.scriptName && !op.engine.CreateNewItem" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_result_pt_identifier')}} : </div>
 	<div class="row-cell row-cell-value row-cell-max-width">
 		<div class="cell-content-wrapper filter-wrapper">
 			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+				<div class="filter-cell header-cell header-property">
+					{{$root.i18n('label_pt_filter_column_property')}}
+				</div>
+				<div class="filter-cell header-cell header-value">
+					{{$root.i18n('label_pt_filter_column_value')}}
+				</div>
 			</div>
 			<div class="identifier-row identifier-content">
 				<div class="filter-property-scriptname filter-cell">
 					<select ng-model="op.engine.ResultObjectType.IdentifierProperty" ng-options="p as p.name for p in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"></select>
 				</div>
 				<div class="filter-value filter-cell">
-					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='text'">
-					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='checkbox'">
-					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='date'">
-					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='number'">
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='text'" />
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='checkbox'" />
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='date'" />
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='number'" />
 					<select ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div ng-if="op.engine.ResultObjectType.scriptName" class="row bootstrap-iso">
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_result_create_new')}} :
+	</div>
+	<div class="row-cell row-cell-value">
+		<input ng-model="op.engine.CreateOptions.Create" type="checkbox" />
+	</div>
+</div>
+
+
+<div ng-if="op.engine.ResultObjectType.scriptName && op.engine.CreateOptions.Create" class="row bootstrap-iso">
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_pt_new_associations')}} :
+	</div>
+	<div class="row-cell row-cell-value largeCell">
+		<select ng-model="op.engine.CreateOptions.TargetAssociationScriptName" ng-options="x.ScriptName as x.DisplayName for x in op.engine.ResultObjectType.AssociationTypes| orderBy:'DisplayName'"></select>
+	</div>
+</div>
+
+<div ng-if="op.engine.ResultObjectType.scriptName && !op.engine.CreateOptions.Create" class="row bootstrap-iso">
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_pt_result')}} :
+	</div>
+	<div class="row-cell row-cell-value">
+		<select ng-model="op.engine.ResultObjectType.ResultProperty" ng-options="p as p.name for p in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"></select>
+	</div>
+</div>
+
+<div ng-if="op.engine.ResultObjectType.scriptName && op.engine.CreateOptions.Create && op.engine.CreateOptions.TargetAssociationScriptName" class="row bootstrap-iso">
+	<div class="row-cell row-cell-label">
+		{{$root.i18n('label_pt_result')}} :
+	</div>
+	<div class="row-cell row-cell-value">
+		<select ng-model="op.engine.ResultObjectType.ResultProperty" ng-options="p as p.name for p in getAssociatedProperties(op.engine.CreateOptions.TargetAssociationScriptName) | orderBy:'name'"></select>
 	</div>
 </div>
