--- a/angularHTMLayout/CalculationFields/Template_CalculateUpdate.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateUpdate.ng.html
@@ -1,63 +1,102 @@
 <div class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_objecttype')}} : </div>
-	<div class="row-cell row-cell-value">
-		<select ng-model="op.engine.Node.SelectedObjectType" ng-options="x as x.name for x in op.engine.availableObjectTypes"></select>
-	</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('label_objecttype')}} :</div>
+  <div class="row-cell row-cell-value">
+    <select ng-model="op.engine.Node.SelectedObjectType" ng-options="x as x.name for x in op.engine.availableObjectTypes"></select>
+  </div>
 </div>
 
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_filter')}} : </div>
-	<div class="row-cell row-cell-value row-cell-max-width">
-		<div class="cell-content-wrapper filter-wrapper">
-			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
-				<div class="filter-cell header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
-			</div>
-			<div class="filter-row filter-content" ng-repeat="f in op.engine.Node.Filters">
-				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(f)"></select>
-				</div>
-				<div class="filter-operator filter-cell">
-					<select ng-model="f.Operator" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
-				</div>
-				<div class="filter-value filter-cell">
-					<input ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='text'">
-					<input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='checkbox'">
-					<input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='date'">
-					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'">
-					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
-					<select style="height:initial" multiple size="{{op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups.length}}" ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator == 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
-				</div>
-				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
-			</div>
-			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a></div>
-		</div>
-	</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('label_pt_filter')}} :</div>
+  <div class="row-cell row-cell-value row-cell-max-width">
+    <div class="cell-content-wrapper filter-wrapper">
+      <div class="filter-row filter-header">
+        <div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
+        <div class="filter-cell header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</div>
+        <div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+      </div>
+      <div class="filter-row filter-content" ng-repeat="f in op.engine.Node.Filters">
+        <div class="filter-property-scriptname filter-cell">
+          <select
+            ng-model="f.ScriptName"
+            ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"
+            ng-change="resetFilter(f)"
+          ></select>
+        </div>
+        <div class="filter-operator filter-cell">
+          <select
+            ng-model="f.Operator"
+            ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName) !== ''"
+            ng-options="x for x in FilterOperators"
+          ></select>
+        </div>
+        <div class="filter-value filter-cell">
+          <input ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='text'" />
+          <input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='checkbox'" />
+          <input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='date'" />
+          <input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'" />
+          <select
+            ng-model="f.Value"
+            ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator != 'In'"
+            ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"
+          ></select>
+          <select
+            style="height: initial"
+            multiple
+            size="{{op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups.length}}"
+            ng-model="f.Value"
+            ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator == 'In'"
+            ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"
+          ></select>
+        </div>
+        <div class="remove-filter-button filter-cell">
+          <a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"
+            ><i class="fa fa-times" aria-hidden="true"></i
+          ></a>
+        </div>
+      </div>
+      <div class="add-filter-button">
+        <a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_new_values')}} : </div>
-	<div class="row-cell row-cell-value row-cell-max-width">
-		<div class="cell-content-wrapper filter-wrapper">
-			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
-			</div>
-			<div class="filter-row filter-content" ng-repeat="v in op.engine.Node.Values">
-				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="v.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'" ng-change="resetValue(v)"></select>
-				</div>
-				<div class="filter-value filter-cell">
-					<input ng-model="v.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='text'">
-					<input ng-model="v.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='checkbox'">
-					<input ng-model="v.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='date'">
-					<input ng-model="v.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='number'">
-					<select ng-model="v.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[v.ScriptName].lookups"></select>
-				</div>
-				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeValue($event, $index)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
-			</div>
-			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addValue($event)">{{$root.i18n('label_pt_values_add_new')}}</a></div>
-		</div>
-	</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('label_pt_new_values')}} :</div>
+  <div class="row-cell row-cell-value row-cell-max-width">
+    <div class="cell-content-wrapper filter-wrapper">
+      <div class="filter-row filter-header">
+        <div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
+        <div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+      </div>
+      <div class="filter-row filter-content" ng-repeat="v in op.engine.Node.Values">
+        <div class="filter-property-scriptname filter-cell">
+          <select
+            ng-model="v.ScriptName"
+            ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"
+            ng-change="resetValue(v)"
+          ></select>
+        </div>
+        <div class="filter-value filter-cell">
+          <input ng-model="v.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='text'" />
+          <input ng-model="v.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='checkbox'" />
+          <input ng-model="v.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='date'" />
+          <input ng-model="v.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='number'" />
+          <select
+            ng-model="v.Value"
+            ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, v.ScriptName)==='lookup'"
+            ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[v.ScriptName].lookups"
+          ></select>
+        </div>
+        <div class="remove-filter-button filter-cell">
+          <a class="btn no-text page-action btn-remove-filter" ng-click="removeValue(op.engine.Node, $index)"
+            ><i class="fa fa-times" aria-hidden="true"></i
+          ></a>
+        </div>
+      </div>
+      <div class="add-filter-button">
+        <a class="btn-add-filter btn page-action" ng-click="addValue(op.engine.Node)">{{$root.i18n('label_pt_values_add_new')}}</a>
+      </div>
+    </div>
+  </div>
 </div>
